jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL_LONG2-ending-APOSTROPHE3.shex
# STRING_LITERAL_LONG2 ending with APOSTROPHE3
# source: turtle-syntax-bad-string-04.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["""abc''']
}
